[gd_scene load_steps=5 format=3 uid="uid://dmtulpb1mx4d3"]

[ext_resource type="Script" uid="uid://d4jc2ilpmluud" path="res://Scripts/UI/lobby_ui.gd" id="1_7vxlf"]

[sub_resource type="Theme" id="Theme_judgc"]
default_font_size = 25

[sub_resource type="Theme" id="Theme_5xrx1"]
default_font_size = 80

[sub_resource type="Theme" id="Theme_7vxlf"]
default_font_size = 25

[node name="LobbyUi" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7vxlf")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(1400, 166.15)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -83.075
offset_right = 3.0
offset_bottom = 83.075
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="P1_text" type="RichTextLabel" parent="HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_judgc")
text = "NOT READY"
vertical_alignment = 1

[node name="Timer" type="RichTextLabel" parent="HBoxContainer"]
custom_minimum_size = Vector2(300, 500)
layout_mode = 2
theme = SubResource("Theme_5xrx1")
text = "0"
horizontal_alignment = 1

[node name="P2_text" type="RichTextLabel" parent="HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
theme = SubResource("Theme_7vxlf")
text = "NOT READY"
horizontal_alignment = 2
vertical_alignment = 1

[node name="Timer" type="Timer" parent="."]
process_mode = 3
wait_time = 10.0
one_shot = true
ignore_time_scale = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
